# routa

./: .gitignore  CMakeLists.txt  cert.pem  key.pem
.github/workflows/: ci.yml
cmake/: CompileFlags.cmake  Sanitizers.cmake
examples/: hello_world.c
include/core/: conn.h  event_loop.h  server.h  threadpool.h
include/http/: request.h  response.h  router.h  static.h
include/net/: epoll.h  io.h  poller.h  socket.h  tls.h
include/util/: buf.h  logger.h
public/: index.html
scripts/: gen_cert.sh
src/core/: conn.c  event_loop.c  server.c  threadpool.c
src/http/: request.c  response.c  router.c  static.c
src/net/: epoll.c  io.c  poller.c  socket.c  tls.c
src/util/: buf.c  logger.c
tests/: test_buf.c  test_request.c
tests/bench/: bench_latency.sh  bench_static.sh  bench_tls.sh
